fix spacing

--- a/frontend/src/styles/contato.module.scss
+++ b/frontend/src/styles/contato.module.scss
@@ -46,6 +46,9 @@
       padding: 3rem;
       border-radius: 2rem;
       margin-top: 5.25rem;
+      display: flex;
+      flex-direction: column;
+      gap: 3vh;
     }
 
 
